Changed script to wc on command crib sheet

--- a/homework/shell-guide/command-crib-sheet.html
+++ b/homework/shell-guide/command-crib-sheet.html
@@ -22,7 +22,7 @@
 				    <li><a href="#">grep</a></li>
 				    <li><a href="#">diff</a></li>
 				    <li><a href="#">man</a></li>
-				    <li><a href="#">script</a></li>
+				    <li><a href="#">wc</a></li>
 				    <li><a href="#">hexdump</a></li>
 				  </ul>
 				</div>
