Added patch step

--- a/homework/ubuntu-kernel/ubuntu-kernel-howto.html
+++ b/homework/ubuntu-kernel/ubuntu-kernel-howto.html
@@ -122,6 +122,13 @@
                 <br />
                 <img src="Resources/Step23.TIFF" height="500" width="900">
                 <p></p>
+            <li>If you want to create a patch file so others can download and apply your customization, navigate to the root of the Ubuntu source code directory and type the following command (This creates a customPatch file in your home directory that you can send to others!):</li>
+                <br />
+                    <pre>git diff master > ~/customPatch</pre>
+                <br />
+
         </ol>
+        <p>Congratulations! You have successfully modified and installed a custom Ubuntu kernel!</p>
+
     </body>
 </html>
